# BugzEx

./: CMakeLists.txt
cmake/: dependencies.cmake
include/bugz/: custom_lz.cpp  custom_lz.hpp
src/: main.cpp
